--- a/src/app/components/contact/hero-section/hero-section.html
+++ b/src/app/components/contact/hero-section/hero-section.html
@@ -1,5 +1,5 @@
 <div class="relative w-full bg-cover bg-center bg-no-repeat"
-  style='background-image: linear-gradient(rgba(16, 22, 34, 0.7) 0%, rgba(16, 22, 34, 0.5) 100%), url("https://lh3.googleusercontent.com/aida-public/AB6AXuCfqyDyssy1fvnwVaEtA1wUen1q6nNSDHyZ3s7cxGnAAjnU1I9jBUn1PUCf7vT-w4tcwrdTR8EVAtZgrFMMCsHJJyJUWC0Rk1t_AffkroslCbObHZ1aS5RJFTYqraVHy0hDjLGh7SUC02l5CunmiO1ks7eHJwgpFmTDYxak86I0Z88LNTF-1SyiyYD7cYEaGT4QyNkMIUSteNmefI205DYqdIobzN6FJ7EBKsTY9h4sut6ke8EwpSaf-f_M03BMDILleYEK9yzPlQgU");'>
+  style='background-image: url("images/herobackgroundRed.png");'>
   <div class="max-w-[1280px] mx-auto px-4 sm:px-6 lg:px-8 py-20 lg:py-24">
     <div class="max-w-2xl">
       <h1 class="text-white text-4xl lg:text-5xl font-black leading-tight tracking-[-0.033em] mb-4">
