--- a/src/components/testimonials/testimonials.html
+++ b/src/components/testimonials/testimonials.html
@@ -21,8 +21,8 @@
         <h3 class="text-xl font-bold mb-6">{{ 'home.testimonials.whyChooseUs' | translate }}</h3>
         <ul class="space-y-4">
           <li class="flex gap-4">
-            <div class="mt-1 flex-shrink-0 flex items-center justify-center size-6 rounded-full bg-green-100 text-green-600">
-              <span class="material-symbols-outlined text-sm">check</span>
+            <div class="mt-1 flex-shrink-0 flex items-center justify-center size-6 rounded-full text-primary ">
+              <span class="material-symbols-outlined">check_circle</span>
             </div>
             <div>
               <h4 class="font-bold text-[#0d121b] dark:text-white">{{ 'home.testimonials.provenTrackRecord.title' | translate }}</h4>
@@ -30,8 +30,8 @@
             </div>
           </li>
           <li class="flex gap-4">
-            <div class="mt-1 flex-shrink-0 flex items-center justify-center size-6 rounded-full bg-green-100 text-green-600">
-              <span class="material-symbols-outlined text-sm">check</span>
+            <div class="mt-1 flex-shrink-0 flex items-center justify-center size-6 rounded-full text-primary">
+              <span class="material-symbols-outlined text-primary">check_circle</span>
             </div>
             <div>
               <h4 class="font-bold text-[#0d121b] dark:text-white">{{ 'home.testimonials.clientCentric.title' | translate }}</h4>
@@ -39,8 +39,8 @@
             </div>
           </li>
           <li class="flex gap-4">
-            <div class="mt-1 flex-shrink-0 flex items-center justify-center size-6 rounded-full bg-green-100 text-green-600">
-              <span class="material-symbols-outlined text-sm">check</span>
+            <div class="mt-1 flex-shrink-0 flex items-center justify-center size-6 rounded-full text-primary">
+              <span class="material-symbols-outlined">check_circle</span>
             </div>
             <div>
               <h4 class="font-bold text-[#0d121b] dark:text-white">{{ 'home.testimonials.awardWinning.title' | translate }}</h4>
