--- a/src/app/components/contact/contact-form/contact-form.html
+++ b/src/app/components/contact/contact-form/contact-form.html
@@ -86,7 +86,7 @@
         </div>
       </div>
       <div class="mt-4">
-        <button [disabled]="isSubmitting" class="w-full md:w-auto min-w-[200px] cursor-pointer flex items-center justify-center rounded-lg h-12 px-6 bg-primary text-white text-base font-bold leading-normal tracking-wide shadow-md hover:bg-blue-600 hover:shadow-lg transition-all transform active:scale-95 disabled:opacity-50 disabled:cursor-not-allowed"
+        <button [disabled]="isSubmitting" class="w-full md:w-auto min-w-[200px] cursor-pointer flex items-center justify-center rounded-lg h-12 px-6 bg-primary text-white text-base font-bold leading-normal tracking-wide shadow-md hover:bg-[#5a111a] hover:shadow-lg transition-all transform active:scale-95 disabled:opacity-50 disabled:cursor-not-allowed"
           type="submit">
           @if (!isSubmitting) {
             <span>Request Consultation</span>
