--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -2,7 +2,7 @@
   <div class="max-w-[1280px] mx-auto px-4 sm:px-6 lg:px-8">
     <div class="flex h-16 items-center justify-between">
       <a routerLink="/" class="flex items-center gap-3 cursor-pointer">
-        <img src="images/logo_blue2.svg" alt="VISTA Law Logo" class="h-12 w-auto">
+        <img src="images/logo_red.png" alt="VISTA Law Logo" class="w-36 h-auto">
         <!-- <h1 class="text-xl font-bold tracking-tight text-[#0d121b] dark:text-white">VISTA</h1> -->
       </a>
       <nav class="hidden md:flex items-center gap-8">
@@ -14,7 +14,7 @@
       </nav>
       <div class="flex items-center gap-4">
         <app-language-switcher></app-language-switcher>
-        <a routerLink="/contact" class="hidden sm:flex items-center justify-center h-10 px-5 bg-primary hover:bg-blue-700 text-white text-sm font-bold rounded-lg transition-all shadow-sm cursor-pointer">
+        <a routerLink="/contact" class="hidden sm:flex items-center justify-center h-10 px-5 bg-primary hover:bg-[#5a111a] text-white text-sm font-bold rounded-lg transition-all shadow-sm cursor-pointer">
           {{ 'common.contactUs' | translate }}
         </a>
         <button (click)="toggleMobileMenu()" class="md:hidden p-2 text-gray-600 dark:text-gray-300">
@@ -33,7 +33,7 @@
         <a (click)="closeMobileMenu()" class="text-base font-medium hover:text-primary transition-colors py-2" routerLink="/lawyers" routerLinkActive="text-primary">{{ 'header.attorneys' | translate }}</a>
         <a (click)="closeMobileMenu()" class="text-base font-medium hover:text-primary transition-colors py-2" routerLink="/about" routerLinkActive="text-primary">{{ 'header.about' | translate }}</a>
         <a (click)="closeMobileMenu()" class="text-base font-medium hover:text-primary transition-colors py-2" routerLink="/contact" routerLinkActive="text-primary">{{ 'header.contact' | translate }}</a>
-        <a (click)="closeMobileMenu()" routerLink="/contact" class="mt-2 flex items-center justify-center h-10 px-5 bg-primary hover:bg-blue-700 text-white text-sm font-bold rounded-lg transition-all shadow-sm">
+        <a (click)="closeMobileMenu()" routerLink="/contact" class="mt-2 flex items-center justify-center h-10 px-5 bg-primary hover:bg-[#5a111a] text-white text-sm font-bold rounded-lg transition-all shadow-sm">
           {{ 'common.contactUs' | translate }}
         </a>
       </nav>
