--- a/src/app/pages/privacy-policy/privacy-policy.html
+++ b/src/app/pages/privacy-policy/privacy-policy.html
@@ -198,7 +198,7 @@
               </div>
             </div>
             <div class="w-full md:w-auto flex-shrink-0">
-              <a routerLink="/contact" class="flex w-full md:w-auto items-center justify-center rounded-lg h-12 px-8 bg-primary hover:bg-blue-700 text-white font-bold transition-all shadow-lg hover:shadow-primary/30">
+              <a routerLink="/contact" class="flex w-full md:w-auto items-center justify-center rounded-lg h-12 px-8 bg-primary hover:bg-[#5a111a] text-white font-bold transition-all shadow-lg hover:shadow-primary/30">
                 Contact Us
               </a>
             </div>
