--- a/src/components/hero/hero.html
+++ b/src/components/hero/hero.html
@@ -9,7 +9,10 @@
           </div>
           <h1 class="text-4xl lg:text-6xl font-black leading-tight tracking-tight text-[#0d121b] dark:text-white">
             @if (currentLanguage === 'en') {
-              {{ 'home.hero.title' | translate }} <span class="text-primary">{{ 'home.hero.titleHighlight1' | translate }}</span> and <span class="text-primary">{{ 'home.hero.titleHighlight2' | translate }}</span>.
+              
+              <p class="text-primary">{{ 'home.hero.titleHighlight1' | translate }}.</p>
+              <p class="text-primary">{{ 'home.hero.titleHighlight2' | translate }}.</p>
+              {{ 'home.hero.title' | translate }} 
             }
             @if (currentLanguage === 'ko') {
               <span class="text-primary">{{ 'home.hero.titleHighlight1' | translate }}</span>과 <span class="text-primary">{{ 'home.hero.titleHighlight2' | translate }}</span> {{ 'home.hero.title' | translate }}
