--- a/src/components/attorneys/attorneys.html
+++ b/src/components/attorneys/attorneys.html
@@ -12,7 +12,7 @@
           </div>
           <h3 class="text-lg font-bold text-[#0d121b] dark:text-white group-hover:text-primary transition-colors">{{ attorney.name }}</h3>
           <p class="text-sm text-primary font-medium mb-2">{{ attorney.title }}</p>
-          <p class="text-sm text-gray-500 text-center">{{ attorney.description }}</p>
+          <p class="text-sm text-gray-500 text-center"> {{ attorney.shortDescription }}</p>
         </a>
       }
     </div>
